--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -10,42 +10,43 @@
         android:layout_marginTop="20dp" >
 
         <TextView
+            android:id="@+id/league_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/test_text"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/League"
-            android:id="@+id/league_textview" />
+            android:textSize="@dimen/League" />
 
         <TextView
+            android:id="@+id/matchday_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/test_text"
             android:textSize="@dimen/League"
-            android:textColor="@android:color/black"
-            android:id="@+id/matchday_textview" />
+            android:textColor="@android:color/black" />
 
     </LinearLayout>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp" >
 
         <Button
+            android:id="@+id/share_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/share_text"
-            android:id="@+id/share_button"
             android:drawableLeft="@android:drawable/ic_menu_share"
-            android:paddingLeft="120dp"
-            android:paddingRight="120dp" />
+            android:drawableStart="@android:drawable/ic_menu_share"
+            android:paddingLeft="@dimen/share_button_margin"
+            android:paddingStart="@dimen/share_button_margin"
+            android:paddingRight="@dimen/share_button_margin"
+            android:paddingEnd="@dimen/share_button_margin" />
     </FrameLayout>
-
 </LinearLayout>
