--- a/app/src/main/res/layout/scores_list_item.xml
+++ b/app/src/main/res/layout/scores_list_item.xml
@@ -10,7 +10,8 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp" >
+        android:paddingTop="5dp"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -19,22 +20,21 @@
             android:orientation="vertical" >
 
             <ImageView
+                android:id="@+id/home_crest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:id="@+id/home_crest" />
+                android:contentDescription="@string/nostr" />
 
             <TextView
+                android:id="@+id/home_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textSize="@dimen/TeamNames"
                 android:gravity="center"
-                android:text="@string/test_text"
-                android:id="@+id/home_name" />
-
+                android:text="@string/test_text" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -42,26 +42,24 @@
             android:orientation="vertical" >
 
             <TextView
+                android:id="@+id/score_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/test_text"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textSize="@dimen/Score"
-                android:id="@+id/score_textview" />
+                android:textSize="@dimen/Score" />
 
             <TextView
+                android:id="@+id/data_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/test_text"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:id="@+id/data_textview" />
-
+                android:gravity="center" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -69,28 +67,24 @@
             android:orientation="vertical" >
 
             <ImageView
+                android:id="@+id/away_crest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:id="@+id/away_crest" />
+                android:contentDescription="@string/nostr" />
 
             <TextView
+                android:id="@+id/away_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/test_text"
-                android:textSize="@dimen/TeamNames"
-                android:id="@+id/away_name" />
-
+                android:textSize="@dimen/TeamNames" />
         </LinearLayout>
     </LinearLayout>
-
     <FrameLayout
+        android:id="@+id/details_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/details_fragment_container" />
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
-
-
