--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,15 @@
     <dimen name="TeamNames">17sp</dimen>
     <dimen name="Score">30sp</dimen>
     <dimen name="League">15sp</dimen>
+
+    <!-- Widget -->
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="teamwidget">10sp</dimen>
+    <dimen name="widget_score">20sp</dimen>
+    <dimen name="widget_data">10sp</dimen>
+    <dimen name="widget_match_height">40dp</dimen>
+    <dimen name="widget_match_width">220dp</dimen>
+    <dimen name="widget_score_large">35sp</dimen>
+    <dimen name="widget_team_large">15sp</dimen>
+    <dimen name="widget_data_large">20sp</dimen>
 </resources>
