--- a/app/src/main/res/layout/widget_match_large.xml
+++ b/app/src/main/res/layout/widget_match_large.xml
@@ -22,7 +22,7 @@
 
             <ImageView
                 android:id="@+id/widget_home_crest"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -77,7 +77,7 @@
 
             <ImageView
                 android:id="@+id/widget_away_crest"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
