--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -47,6 +47,7 @@
             android:paddingLeft="@dimen/share_button_margin"
             android:paddingStart="@dimen/share_button_margin"
             android:paddingRight="@dimen/share_button_margin"
-            android:paddingEnd="@dimen/share_button_margin" />
+            android:paddingEnd="@dimen/share_button_margin"
+            android:contentDescription="@string/share_text" />
     </FrameLayout>
 </LinearLayout>
