--- a/app/src/main/res/layout/scores_list_item.xml
+++ b/app/src/main/res/layout/scores_list_item.xml
@@ -53,7 +53,7 @@
                 android:textSize="@dimen/Score" />
 
             <TextView
-                android:id="@+id/data_textview"
+                android:id="@+id/date_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
