--- a/app/src/main/res/drawable/list_item.xml
+++ b/app/src/main/res/drawable/list_item.xml
@@ -10,7 +10,7 @@
     <item android:right="1dp" android:left="1dp" android:bottom="2dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="@android:color/white"/>
+            <solid android:color="@color/blue_50" />
             <corners android:radius="0dp"/>
         </shape>
     </item>
