--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,4 +5,6 @@
 
     <item android:id="@+id/action_about" android:title="@string/about"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="200" app:showAsAction="never" />
 </menu>
